refactor(controller): 优化 FoodController 中的食物列表返回方式
-将 List.of() 替换为 Arrays.asList()，以提高代码兼容性和可维护性

Signed-off-by: Chlorine001 <1151259938@qq.com>